--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/title_activity_sample"></activity>
+            android:label="@string/title_activity_sample" >
+        </activity>
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
