--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.Camera" android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -11,11 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activity.ui.recipe.RecipeActivity"
+        android:theme="@style/RecipeTheme">
+        <activity android:name=".activity.ui.upload.UploadRecipe"></activity>
+        <activity
+            android:name=".activity.ui.recipe.RecipeActivity"
             android:label=""
-            android:theme="@style/RecipeTheme"
-            />
+            android:theme="@style/RecipeTheme" />
         <activity
             android:name=".activity.ui.login.SignUpActivity"
             android:label="@string/title_activity_sign_up"
@@ -27,7 +30,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_sample"
-            />
+            android:theme="@style/RecipeTheme" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
